--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,10 @@
-<!DOCTYPE html>
-<html>
-<head>
-  <title>Locationscout</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
-</head>
+<title><%= full_title(yield(:title)) %></title>
 <body>
-
-<%= yield %>
-
-</body>
-</html>
+    <header>
+      <%= render 'layouts/navigation' %>
+    </header>
+    <main role="main" class="container-fluid">
+       <%= render 'layouts/messages' %>
+       <%= yield %>
+    </main>
+  </body>
