--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,1 +1,13 @@
-<li><%= link_to 'About', '/about' %></li>
+
+<% if user_signed_in? %>
+  <li><%= link_to 'Scenes', scenes_path %></li>
+  <li><%= link_to 'About', '/about' %></li>
+  <li><%= link_to('Settings', edit_user_registration_path) %></li>
+  <li><%= link_to('Logout', destroy_user_session_path, :method => :delete) %> </li>
+<% else %>
+  <li><%= link_to 'About', '/about' %></li>
+  <li><%= link_to('Sign Up!', new_user_registration_path)  %></li>
+  <li><%= link_to('Login', new_user_session_path)  %></li>
+
+
+<% end %>
