movies and scenes

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,7 @@
     <main role="main" class="container-fluid">
        <%= render 'shared/messages' %>
        <%= yield %>
+       <%= render 'layouts/footer' %>
     </main>
   </body>
 </html>
