--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,7 +1,7 @@
 <div class="page-header">
   <%= link_to movies_path, class: 'btn btn-default' do %>
     <span class="glyphicon glyphicon-list-alt"></span>
-    Back
+    List
   <% end %>
   <%= link_to edit_movie_path(@movie), class: 'btn btn-primary' do %>
     <span class="glyphicon glyphicon-pencil"></span>
