--- a/app/views/scenes/new.html.erb
+++ b/app/views/scenes/new.html.erb
@@ -1,7 +1,7 @@
 <div class="page-header">
   <%= link_to scenes_path, class: 'btn btn-default' do %>
     <span class="glyphicon glyphicon-list-alt"></span>
-    Back
+    List
   <% end %>
   <h1>New scene</h1>
 </div>
