--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -1,6 +1,8 @@
 
 <% if user_signed_in? %>
+  <li><%= link_to 'Around', '/around' %></li>
   <li><%= link_to 'Scenes', scenes_path %></li>
+  <li><%= link_to 'Movies', movies_path %></li>
   <li><%= link_to 'About', '/about' %></li>
   <li><%= link_to('Settings', edit_user_registration_path) %></li>
   <li><%= link_to('Logout', destroy_user_session_path, :method => :delete) %> </li>
