--- a/app/views/scenes/_form.html.erb
+++ b/app/views/scenes/_form.html.erb
@@ -18,6 +18,43 @@
       <%= f.text_field :name, class: "form-control" %>
     </div>
   </div>
+   <div class="form-group">
+    <%= f.label :movie, class: "col-sm-2 control-label" %>
+    <div class="col-sm-10">
+  <%= f.collection_select :movie_id, Movie.all, :id, :title, :prompt => true %>
+    </div>
+  </div>
+  <div class="form-group">
+    <%= f.label :description, class: "col-sm-2 control-label" %>
+    <div class="col-sm-10">
+      <%= f.text_area :description, class: "form-control" %>
+    </div>
+  </div>
+  <div class="form-group">
+    <%= f.label :address, class: "col-sm-2 control-label" %>
+    <div class="col-sm-10">
+      <%= f.text_field :address, class: "form-control" %>
+    </div>
+  </div>
+  <div class="form-group">
+    <%= f.label :city, class: "col-sm-2 control-label" %>
+    <div class="col-sm-10">
+      <%= f.text_field :city, class: "form-control" %>
+    </div>
+  </div>
+  <div class="form-group">
+    <%= f.label :state, class: "col-sm-2 control-label" %>
+    <div class="col-sm-10">
+      <%= f.text_field :state, class: "form-control" %>
+    </div>
+  </div>
+  <div class="form-group">
+    <%= f.label :zip, class: "col-sm-2 control-label" %>
+    <div class="col-sm-10">
+      <%= f.text_field :zip, class: "form-control" %>
+    </div>
+  </div>
+
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
       <%= f.submit class: "btn btn-primary" %>
