--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,5 +1,3 @@
 <div class="text-center jumbotron">
-  <h1>Welcome to the TODO App</h1>
-  <h3>This is the home page for the Rails TODO App with AuthN and AuthZ.</h3>
-  <br/>
+  <img src="https://c1.staticflickr.com/7/6001/5975825787_6b833bd0e7_z.jpg" alt="Mountain View" style="width:95%">
 </div>
