--- a/app/views/layouts/_map.html.erb
+++ b/app/views/layouts/_map.html.erb
@@ -1,54 +1,20 @@
-<div id="map" style='width: 800px; height: 400px;'></div>
+<div id="map" style='height: 500px; '></div>
+<script type="text/javascript">
 
-<script>
-// Note: This example requires that you consent to location sharing when
-// prompted by your browser. If you see the error "The Geolocation service
-// failed.", it means you probably did not give permission for the browser to
-// locate you.
-  function initMap() {
-    var pos;
-    var map = new google.maps.Map(document.getElementById('map'), {
-      center: pos,
-      zoom: 15
-    });
-    var coords = <%= @coords_array.to_json.html_safe %>
-    console.log(coords);
 
-    var infoWindow = new google.maps.InfoWindow({map: map});
-    for (var i = 0; i < coords.length; i++) {
-        var data = coords[i];
-        var myLatlng = new google.maps.LatLng(data.lat, data.lng);
-        var icon_color;
-           if (data.what == "assignee") {
-               icon_color = 'https://maps.google.com/mapfiles/ms/icons/blue-dot.png'
-            } else {
-               icon_color = 'https://maps.google.com/mapfiles/ms/icons/green-dot.png'
-            };
-        var marker = new google.maps.Marker({
-            position: myLatlng,
-            map: map,
-            title: data.name,
-            icon: icon_color
-        });
-
-        //Attach click event to the marker.
-        (function (marker, data) {
-            google.maps.event.addListener(marker, "click", function (e) {
-                //Wrap the content inside an HTML DIV in order to set height and width of InfoWindow.
-                infoWindow.setContent("<div style = 'width:200px;min-height:40px;color:black'>" + data.name + "</div>");
-                infoWindow.open(map, marker);
-            });
-        })(marker, data);
-      }
-    // Try HTML5 geolocation.
+function initMap() {
+  var pos;
+ var map = new google.maps.Map(document.getElementById('map'), {
+    center: pos,
+    zoom: 8
+  });
+ // Try HTML5 geolocation.
     if (navigator.geolocation) {
       navigator.geolocation.getCurrentPosition(function(position) {
         pos = {
           lat: position.coords.latitude,
           lng: position.coords.longitude
         };
-        infoWindow.setPosition(pos);
-        infoWindow.setContent("<div style = 'width:75px;min-height:10px;color:black'>You are Here</div>");
         map.setCenter(pos);
       }, function() {
         handleLocationError(true, infoWindow, map.getCenter());
@@ -63,9 +29,13 @@
     infoWindow.setContent(browserHasGeolocation ?
                           'Error: The Geolocation service failed.' :
                           'Error: Your browser doesn\'t support geolocation.');
-  }
-</script>
 
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBMxa7ucqwX08z6wLjiuAj_YdCtTnXjWYY&signed_in=true&callback=initMap"
-  async defer>
-</script>
+}
+
+    </script>
+    <script async defer
+      src="https://maps.googleapis.com/maps/api/js?v=3.22&key=AIzaSyDOINxdZoRY9KAdxlZhMEiWjLcdwofGqys&callback=initMap">
+    </script>
+
+
+
