--- a/app/views/scenes/_form.html.erb
+++ b/app/views/scenes/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@scene, html: { class: "form-horizontal", role: "form" }) do |f| %>
+<%= form_for(@scene, multipart: true, html: { class: "form-horizontal", role: "form" }) do |f| %>
   <% if @scene.errors.any? %>
     <div class="alert alert-danger alert-dismissable" role="alert">
       <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
@@ -52,6 +52,18 @@
     <%= f.label :zip, class: "col-sm-2 control-label" %>
     <div class="col-sm-10">
       <%= f.text_field :zip, class: "form-control" %>
+    </div>
+  </div>
+  <div class="form-group">
+    <%= f.label "Scene Shot", class: "col-sm-2 control-label" %>
+    <div class="col-sm-10">
+      <%= f.file_field :scene_shot, class: "form-control" %>
+    </div>
+  </div>
+  <div class="form-group">
+    <%= f.label "Location Shot", class: "col-sm-2 control-label" %>
+    <div class="col-sm-10">
+      <%= f.file_field :location_shot, class: "form-control" %>
     </div>
   </div>
 
