--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -13,7 +13,7 @@
             <th>Name</th>
             <th>Show</th>
             <th>Edit</th>
-            <th>Destroy</th>
+            <th>Delete</th>
       </tr>
     </thead>
 
@@ -22,7 +22,7 @@
             <td><%= movie.title %></td>
             <td><%= link_to 'Show', movie %></td>
         <td><%= link_to 'Edit', edit_movie_path(movie) %></td>
-        <td><%= link_to 'Destroy', movie, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Delete', movie, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       <% end %>
     </tbody>
   </table>
