--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,2 +1,10 @@
 <% provide(:title, 'About') %>
+<div id="about" class="clearfix">
+<div>
+<img style="float: left; width:200px; margin-right :50px"src="https://sannewierda.files.wordpress.com/2011/05/tumblr_l4fxpgk8a91qbj2hlo1_500_large.jpg" alt="Meg Ryan" >
 
+
+The diner in When Harry Met Sally, President Snows palace in The Hunger Games, the library steps in Rocky, Prseidents snowthe streets of San Francisco from the iconic chase scene in Bullit. Some locations are an essential part of movie magic. if you love movies there are locations that you want to see for yourself. Particularly if they are nearby or are in a place you plan to visit. Now there is an app for that. Location Scout will let you find your favorite movies, scenes and the locations where they were filmed.
+
+</div>
+</div>
